2008-03-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b122

 * Fix: Renaming an album-foldername in a subalbum ended in a wron redirect.

   Thanks to 'plug' from forum.

 * Fix: Warning when using fs_exec in windows.

 * Change: Admins can now always change their password.

2008-03-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b121

 * Fix: "view comments" should not be an option in thumbs view.
        If its an option anywhere, it must not be a popup.

   Thanks to 'plug' from forum.

2008-02-02 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b120

 * Change: Mostly code nicify, little wording etc.

2008-01-13 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b119

 * Fix: Captionator got broken in b112.

   Thanks to Kai.

2007-12-31 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b118

 * Fix: Forgot some NetPBM from change in b115.

  Thanks to vmole from forum.

2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b117

 * Change: Removed setup/config_data.inc

2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b116

 * Change: Use enhanced syntax of drawselect for separator in
		   album_permissions.php

 * Change: Added modules.php.patch as file to skip when building the
		   manifest.

 * CHANGE: Do not turn down the error reporting in init.php

 * Fix: Clickcounter in thumbsview.

 * New: Add posibility to use an URLparam 'nocount' to disable clickcount.

 * Fix: Correct handling when $index is > #Photos in photo view.

 * Fix: Correct setting of $do_fullOnly in phot oview.

2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b115

 * CHANGE: Renamed all NetPBM etc. to Netpbm

 * CHANGE: Lowered all functionnames starting with NeTpBm etc. to netpbm

 * New: Function getJheadVersion()

 * Change: Show warning if jhead older than 2.7

2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b114

 * Update: horde/Browser.php from the Horde Project.

 * Update: Mail/htmlMimeMail class from Richard Heyes.

 * Update: Mail/RFC822.php class from PEAR

 * Update: Mail/mimePart.php class from PEAR
