@@ -46,3 +46,20 @@ body {
     float: right;
 }
 
+.g-borderright {
+     border-left: 1px dashed;
+}
+
+.g-borderleft {
+    border-right: 1px dashed;
+}
+
+.g-usernameInput, .g-usernameInput:focus {
+	background: url('../images/icons/user_gray.gif') no-repeat right top;
+	padding-right: 20px;
+}
+
+.g-passwordInput, .g-passwordInput:focus {
+	background: url('../images/icons/key.gif') no-repeat right top;
+	padding-right: 20px;
+}
