@@ -625,13 +625,13 @@ a:hover, .g-dim a:hover, .g-message a:hover, .g-content-popup a:hover, .g-popup 
 
 /***** General Form styles  ******/
 
-input, textarea, select {
+input, textarea, select, .g-usernameInput, .g-passwordInput{
 	color: #000;
 	background-color: #f3f3f9;
 	border: 1px solid #669;
 }
 
-input:focus, textarea:focus, select:focus {
+input:focus, textarea:focus, select:focus, .g-usernameInput:focus, .g-passwordInput:focus {
 	background-color: #fff;
 	border: 1px solid #99f;
 }
